# LEAF

./: .gitignore  BUILD.md  Colors.qml  HelpItem.qml  README.md  collections.json  config.json  leaf.spec  main.py  main.qml  pyproject.toml  requirements.txt  run.sh  setup.py
backend/: __init__.py  base_manager.py  collection_manager.py  config_manager.py  font_manager.py  main_manager.py  notes_manager.py  stats_manager.py  theme_manager.py
build_scripts/: build_deb.sh  build_linux.sh  build_macos.sh  build_windows.bat  create_deb.sh
collections/: ANOH.json.deleted_20250707_214129  More.json
qml/: ColorField.qml  Colors.qml  HelpItem.qml  ThemeEditor.qml  main.qml
