[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaf-notes"
version = "1.0.0"
description = "A beautiful note-taking application with themes and collections"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
]
keywords = ["notes", "productivity", "qt", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.gui-scripts]
leaf-notes = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/leaf-notes"
Repository = "https://github.com/yourusername/leaf-notes.git"